--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.0.14",
     "astro": "^5.5.2",
+    "redis": "^4.7.0",
     "tailwindcss": "^4.0.14"
   }
 }
