--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/netlify": "^6.2.3",
     "@tailwindcss/vite": "^4.0.14",
     "astro": "^5.5.2",
     "redis": "^4.7.0",
