--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   },
   "dependencies": {
     "@astrojs/netlify": "^6.2.3",
-    "@tailwindcss/vite": "^4.0.14",
+    "@astrojs/tailwind": "^5.1.0",
+    "@tailwindcss/forms": "^0.5.7",
+    "@tailwindcss/typography": "^0.5.10",
     "astro": "^5.5.2",
+    "ioredis": "^5.3.2",
     "redis": "^4.7.0",
-    "tailwindcss": "^4.0.14"
+    "tailwindcss": "^3.3.5"
   }
 }
