--- a/netlify.toml
+++ b/netlify.toml
@@ -2,7 +2,7 @@
   command = "npm run build"
   publish = "dist"
   # Explicitly set the build environment
-  environment = { NODE_VERSION = "18" }
+  environment = { NODE_VERSION = "18", PYTHON_VERSION = "off", MISE_PYTHON_INSTALL = "false", MISE_AUTO_INSTALL = "false" }
 
 # No Go configuration or detection should happen
 
