--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.10",
     "astro": "^5.5.2",
+    "dotenv": "^16.3.1",
     "ioredis": "^5.3.2",
+    "node-fetch": "^3.3.2",
     "redis": "^4.7.0",
     "tailwindcss": "^3.3.5"
   }
