--- a/package.json
+++ b/package.json
@@ -7,7 +7,12 @@
     "node": ">=18.0.0",
     "npm": ">=8.0.0"
   },
-  "keywords": ["astro", "javascript", "nodejs", "website"],
+  "keywords": [
+    "astro",
+    "javascript",
+    "nodejs",
+    "website"
+  ],
   "scripts": {
     "dev": "astro dev",
     "build": "astro build",
@@ -15,11 +20,11 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/netlify": "^6.2.3",
-    "@astrojs/tailwind": "^5.1.0",
+    "@astrojs/netlify": "^6.2.5",
+    "@astrojs/tailwind": "^6.0.2",
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.10",
-    "astro": "^5.5.2",
+    "astro": "^5.6.1",
     "dotenv": "^16.3.1",
     "ioredis": "^5.3.2",
     "node-fetch": "^3.3.2",
